--- a/src/components/Playlist/Playlist.module.css
+++ b/src/components/Playlist/Playlist.module.css
@@ -17,3 +17,18 @@
     color: grey;
     background-color: transparent;
 }
+
+.save {
+    border: none;
+    height: 2rem;
+    color: black;
+    width: 10%;
+    background-color: rgba(0, 180, 0, 0.7);
+}
+.save:hover {
+    background-color: rgb(0, 210, 0);
+}
+.save:active {
+    background-color: rgba(0, 180, 0, 0.3);
+    color: black;
+}
