--- a/src/components/Track/Track.module.css
+++ b/src/components/Track/Track.module.css
@@ -22,8 +22,14 @@
 
 .card {
     display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.card .songInfo{
+    display: inline-flex;
     flex-direction: column;
-    width: 40%;
+    width: 50%;
 }
 
 .remove {
@@ -71,3 +77,12 @@
     transform: scale(0.9);
     border: 1px solid #00CED1;
 }
+
+.Preview {
+    display: inline-block;
+    width: 30%;
+    margin-right: 1rem;
+    color: #1A1A1A;
+    opacity: 0.7;
+}
+
